Fix misaligned icons #36
This was caused by a rogue style rule.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -102,11 +102,6 @@ body {
     padding: 5px 1em !important;
 }
 
-.container-fluid {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-}
-
 .navbar-inverse {
     background-color: #d9edf7 !important;
     border-color: #d9edf7 !important;
